<resources>
    <string name="app_name" translatable="false">Sakhi</string>
    <string name="PREF_NAME" translatable="false">Sakhi-pref-1</string>
    <string name="PREF_D2D_API_KEY" translatable="false">JWT-Token_A</string>
    <string name="PREF_primary_API_KEY" translatable="false">JWT-Token_B</string>
    <string name="PREF_primary_JWT_API_KEY" translatable="false">JWT-Token_N</string>
    <string name="PREF_primary_REFRESH_TOKEN" translatable="false">Refresh-Token_N</string>
    <string name="PREF_rem_me_uname" translatable="false">user-name-local-saved</string>
    <string name="PREF_rem_me_pwd" translatable="false">password-local-saved</string>
    <string name="PREF_rem_me_state" translatable="false">state_user-local-saved</string>
    <string name="PREF_location_record_entry" translatable="false">location-record</string>
    <string name="PREF_user_entry" translatable="false">logged-in-user</string>
    <string name="PREF_full_load_pull_progress" translatable="false">full_load_sync_pull_amrit</string>
    <string name="PREF_first_pull_amrit_last_synced_page" translatable="false">full_load_sync_pull_amrit_first_sync_last_saved_page</string>
    <string name="PREF_current_saved_language" translatable="false">Locale.Helper.Selected.Language</string>
    <string name="PREF_current_dp_uri" translatable="false">DP_URI_cat</string>
    <string name="radio_title" translatable="false">%s<span> *</span></string>
    <string name="radio_title_ds">%s<span> **</span></string>
    <string name="tracking_date">Date of Visit</string>
    <string name="case_date">Maleria Screening Date</string>
    <string name="start_t_date">Date of Starting Treatment</string>
    <string name="treatment_given">Treatment Given</string>
    <string name="aes_submitted">AES/JS Form submitted</string>
    <string name="date_of_completion">Date of Completion of Treatment</string>
    <string name="date_of_referal">Date of Referral</string>
    <string name="death_date">Date of death</string>
    <string name="home_visit_date">Home Visit Date</string>
    <string name="home_visit_date_screening">Home Visit Date (Screening Date)</string>
    <string name="visit_date">Visit Date</string>
    <string name="home_visit_date_mda_program">Home Visit Date(MDA Program)</string>
    <string name="case_date_malaria">Malaria Case Status Date</string>
    <string name="aes_case_status_date">AES / JE Case Status Date</string>
    <string name="case_status">Case Status</string>
    <string name="m_test_type">Malaria Test Type</string>
    <string name="place_of_Death">Place of Death</string>
    <string name="reason_of_Death">Reason for Death</string>
    <string name="aes_case_status">AES / JE  Case Status</string>
    <string name="mdsr_form">MDSR</string>
    <string name="mdsr_district">District</string>
    <string name="mdsr_state">State</string>
    <string name="mdsr_month">Month</string>
    <string name="mdsr_year">Year</string>
    <string name="mdsr_name_deceased">Name of deceased</string>
    <string name="mdsr_age">Age</string>
    <string name="mdsr_date_of_deceased">Date of death</string>
    <string name="mdsr_address">Address</string>
    <string name="mdsr_husband_name">Husband’s name</string>
    <string name="mdsr_cause">Cause of death</string>
    <string name="mdsr_maternal">Maternal</string>
    <string name="mdsr_non_maternal">Non-maternal</string>
    <string name="mdsr_name_designation">Name/Designation</string>
    <string name="mdsr_field_investigation">Date of field investigation</string>
    <string name="mdsr_signature">Signature of MO I/C of the block:</string>
    <string name="mdsr_ic_date">Date</string>
    <string name="mdsr_reason_death">specify reasons</string>
    <string name="mdsr_action">Action taken</string>
    <string name="refer_to">Referred To</string>
    <string name="day_wise_tracking_pf">Pf - Day-wise Tracking</string>
    <string name="day_wise_tracking_pv">PV - Day-wise Tracking</string>
    <string-array name="type_of_leprocy">
        <item name="mb">MB (Multibacillary)</item>
        <item name="pb">PB (Paucibacillary)</item>
    </string-array>
    <string name="treatment_start_date">Treatment Start Date</string>
    <string name="dose_status">DEC and Albendazole Dose Status</string>
    <string name="is_medicine_distributed">Is medicine Distributed</string>
    <string name="body_part">Which part of Body	</string>
    <string name="medicine_side_effect">Medicine  Side Effect</string>
    <string name="filaria_submitted">Filaria Form submitted</string>
    <string name="leprosy_submitted">Leprosy Form submitted</string>
    <string name="malariacasecount">Malaria Case Count</string>
    <string name="filariacasecount">Filaria Case Count</string>
    <string name="suffering_from_filaries">Suffering from Filariasis</string>
    <string name="str_leprosy_status">Leprosy Status</string>
    <string name="irs_submitted">IRS Form submitted</string>
    <string name="ben_marked_death">Beneficiary marked as Deceased.</string>
    <string name="kala_submitted">Kala Azar Form submitted</string>
    <string name="isrefer">REFER</string>
    <string name="ncd_refer_alert">Do you want to refer to HWC facility?</string>
    <string name="cbac_screening_submitted">CBAC Screening submitted</string>
    <string name="hbnc_baby_dead_alert">Cause of death to be reported to ANM/MPW/PHC for infant death review.</string>
    <string name="hbnc_baby_gestational_age_alert" translatable="false">If child is born in less than 35 weeks, pay attention.</string>
    <string name="hbnc_mother_dead_alert">Report to ANM/PHC for maternal death review.</string>
    <string name="hbnc_mother_problem_alert">If yes, refer immediately to a hospital.</string>
    <string name="hbnc_mother_num_eat_alert">If the mother does not eat full stomach or eat less than 4 times, advise mother to do so.</string>
    <string name="hbnc_mother_num_pad_alert">If more than 5 pads, refer the mother to the hospital.</string>
    <string name="hbnc_baby_warm_winter_alert">Advise the mother to do so, if not being done.</string>
    <string name="hbnc_baby_fed_properly_alert">Advise the mother to do so, if not being done.</string>
    <string name="hbnc_baby_cry_incessant_alert">Advise mother to feed the baby after every 2 hours.</string>
    <string name="hbnc_baby_temp_alert">Temperature up to 102°F (38.9°C) - treat with paracetamol, and if the temperature is above it, refer to hospital.</string>
    <string name="hbnc_mother_foul_discharge_alert">If yes, refer the mother to a hospital.</string>
    <string name="hbnc_mother_speak_abnormal_fits_alert">If yes, refer the mother to a hospital.</string>
    <string name="hbnc_mother_less_no_milk_alert">Ask the mother to feed the baby more often and counsel her for proper attachment and positioning during breastfeeding.</string>
    <string name="hbnc_mother_breast_problem_alert">In case of cracked nipples, advise the mother to keep the breast clean and lubricated.</string>
    <string name="hbnc_baby_eye_pus_alert">If there is pus in the eye then antibiotic ointment can be applied.</string>
    <string name="hbnc_baby_weight_1_8_alert">Refer the baby to Sick New born care unit at the nearest health facility and also conduct extra home visits as per the high risk baby form. If the baby (low birth weight or normal) is not gaining weight then refer to SNCU at the nearest health facility.</string>
    <string name="hbnc_baby_weight_2_5_alert">Advise the mother to provide extra warmth to the baby and feed the baby more frequently. If the baby (low birth weight or normal) is not gaining weight then refer to SNCU at the nearest health facility.</string>
    <string name="title_activity_home" translatable="false">HomeActivity</string>
    <string name="title_activity_supervisor" translatable="false">SupervisorActivity</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="cd_icon_grid_icon">icon</string>
    <string name="nav_item_1_text">Name : <b>%s</b></string>
    <string name="nav_item_2_text">Username : <b>%s</b></string>
    <string name="nav_item_facility_text">Facility : <b>%s</b></string>
    <string name="nav_item_emp_text">Employee ID :  <b>%s</b></string>
    <string name="nav_item_3_text">User ID :  <b>%s</b></string>
    <string name="nav_item_4_text">Version : %s</string>
    <string name="tv_required_text_asterisk">*</string>
    <string name="rv_item_hh_entry_1">%1$d</string>
    <string name="notification_sync_channel_name">Sync Data</string>
    <string name="notification_sync_channel_description">Upload beneficiaries to Server</string>
    <string name="notification_sync_channel_id">sakhi-sync0</string>
    <string name="btn_submit">Submit</string>
    <string name="enter_abha_id_ayushman_card_number">Enter Abha Id / Ayushman Card Number</string>
    <string name="network_error">Network error. Please check your connection and try again.</string>
    <string name="abha_no_valid_details">No valid details found for this card number.</string>
    <string name="abha_id_check_question">Do you have ABHA ID / Ayushman ID?</string>
    <string name="irs_off">IRS OFF</string>
    <string name="adolescent_health_form">Adolescent Health Form</string>
    <string name="irs_on">IRS ON</string>
    <string name="mosquito_net_on">Mosquito Net ON</string>
    <string name="mosquito_net_off">Mosquito Net OFF</string>
    <string name="btn_apply">Apply</string>
    <string name="long_to_string">%d</string>
    <string name="ben_pending_sync">Pending Sync</string>
    <string name="tv_reg_date_ph">Registration Date</string>
    <string name="reg_date">Reg Date</string>
    <string name="tv_ben_name_ph">Beneficiary Name</string>
    <string name="tv_type_of_list">Type of List</string>
    <string name="tv_rch_id">RCH ID</string>
    <string name="tv_ben_surname">Beneficiary Surname</string>
    <string name="tv_gender_ph">Gender</string>
    <string name="tv_father_name_ph">Father Name</string>
    <string name="tv_husband_name_ph">Husband Name</string>
    <string name="tv_spouse_name_ph">Spouse Name</string>
    <string name="tv_family_head_name_ph">Family Head Name</string>
    <string name="tv_date_of_death">Date Of Death</string>
    <string name="tv_spouse">Spouse</string>
    <string name="tv_ben_id_ph">Ben ID</string>
    <string name="tv_mob_no_ph">Mobile Number</string>
    <string name="tv_age_ph">Age</string>
    <string name="tv_suspected_hrp_ph">Suspected HRP</string>
    <string name="iv_sync_state_tv">SYNC STATE</string>
    <string name="rch_id">RCH ID</string>
    <string name="view">VIEW</string>
    <string name="add">ADD</string>
    <string name="sync_status">Sync Status</string>
    <string name="go_to_home">Go to Home</string>
    <string name="change_language">Change Language</string>
    <string name="all">All</string>
    <string name="with_abha">With ABHA</string>
    <string name="without_abha">Without ABHA</string>
    <string name="age_above_30_years">Age above 40 years</string>
    <string name="filter_list">Filter</string>
    <string name="ben_with_rch_id">Ben With RCH ID</string>
    <string name="notifications_title">Notifications</string>
    <string name="no_notifications_yet">No notifications yet</string>
    <string name="clear_notifications">Clear notifications</string>
    <string name="notification_close">Close</string>
    <string name="monthly_recap_playback_close_cd">Close your Monthly Recap</string>
    <string name="monthly_recap_playback_replay">Watch again</string>
    <string name="monthly_recap_playback_girl_cd">Your ASHA didi celebrating your work</string>
    <string name="monthly_recap_playback_prev_cd">Previous message</string>
    <string name="monthly_recap_playback_next_cd">Next message</string>
    <string name="monthly_recap_playback_pause_cd">Pause</string>
    <string name="monthly_recap_music_on_cd">Turn background music off</string>
</resources>