<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/sync_status"
        android:icon="@drawable/ic_synced"
        android:title="@string/sync_status"
        app:iconTint="@android:color/white"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/toolbar_menu_home"
        android:icon="@drawable/ic_home"
        android:title="@string/go_to_home"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/toolbar_menu_notifications"
        android:icon="@drawable/ic_notifications"
        android:title="@string/notifications_title"
        app:actionLayout="@layout/view_bell_badge"
        app:showAsAction="always" />

    <item
        android:id="@+id/toolbar_menu_language"
        android:icon="@drawable/ic_icon_language"
        android:title="@string/change_language"
        app:showAsAction="ifRoom" />


</menu>