<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="option"
            type="org.piramalswasthya.sakhi.model.ChildOption" />

        <variable
            name="clickListener"
            type="org.piramalswasthya.sakhi.adapters.ChildCareVisitListAdapter.ChildOptionsClickListener" />

    </data>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/padding_normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_normal"
            android:text="@{option.title}"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            tools:text="Child VISIT" />

        <androidx.legacy.widget.Space
            android:layout_width="20dp"
            android:layout_height="match_parent" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/colorPrimary"
            android:text="@string/add"
            android:onClick="@{() -> clickListener.onAddClicked(option)}"
            android:textColor="?attr/colorOnPrimary" />

        <androidx.legacy.widget.Space
            android:layout_width="10dp"
            android:layout_height="match_parent" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/colorPrimary"
            android:text="@string/view"
            android:onClick="@{() -> clickListener.onAddClicked(option)}"
            android:textColor="?attr/colorOnPrimary" />

        <androidx.legacy.widget.Space
            android:layout_width="10dp"
            android:layout_height="match_parent" />

        <ImageView
            android:id="@+id/iv_sync_state"
            android:layout_width="24dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginHorizontal="@dimen/padding_small"
            android:contentDescription="@string/iv_sync_state_tv"
            tools:src="@drawable/ic_synced" />

    </LinearLayout>
</layout>
